# NI-B210-Sync

./: .gitignore  README.md
Octoclock validation/: Readme.md
experiments/: process_all_files.py  readme.md
experiments/01_dual_rx_channel_single_b210/client/: iq_capture_b210.py
experiments/01_dual_rx_channel_single_b210/results/: circmean_and_circstd.csv
experiments/02_dual_rx_channel_single_b210/client/: run_experiment.sh
experiments/02_dual_rx_channel_single_b210/processing/: plot_mean_std_angles.py  plot_unit_circle.py  store_phase_difference.py
experiments/02_dual_rx_channel_single_b210/results/: circmean_and_circstd.csv
experiments/03_dual_tx_channel_single_b210/client/: iq_capture_b210.py  run_experiment.sh
experiments/03_dual_tx_channel_single_b210/processing/: plot_mean_std_angles.py  plot_unit_circle.py  store_phase_difference.py
experiments/03_dual_tx_channel_single_b210/results/: circmean_and_circstd.csv
experiments/04_dual_rx_matrix/client/: run_experiment.sh
experiments/04_dual_rx_matrix/processing/: plot_mean_2d.py  store_phase_difference.py
experiments/04_dual_rx_matrix/results/: circmean_and_circstd.csv
experiments/05_vco_rates/: example_output.txt  sweep_rates.py
octoclock-validation/: Readme.md
phased-locked-loop/: README.md
phased-locked-loop/MAX2870-arduino-firmware/: platformio.ini
phased-locked-loop/MAX2870-arduino-firmware/lib/MAX2871/: MAX2871.cpp
phased-locked-loop/MAX2870-arduino-firmware/src/: main.cpp
phased-locked-loop/firmware/MAX2870-arduino-firmware/: platformio.ini
phased-locked-loop/firmware/MAX2870-arduino-firmware/lib/MAX2871/: MAX2871.cpp  MAX2871.h
phased-locked-loop/firmware/MAX2870-arduino-firmware/src/: main.cpp
phased-locked-loop/firmware/usrp-pll-board-firmware/: platformio.ini
phased-locked-loop/firmware/usrp-pll-board-firmware/lib/MAX2871/: MAX2871.cpp
phased-locked-loop/firmware/usrp-pll-board-firmware/lib/nI2C/: nTWI.cpp  nTWI.h
phased-locked-loop/firmware/usrp-pll-board-firmware/src/: main.cpp
phased-locked-loop/hardware/raspberry-pi-hat-board/: v6.brd  v6.sch
phased-locked-loop/hardware/ursp-pll-board/: Versie 4.GBL  Versie 4.GBO  Versie 4.GBP  Versie 4.GBS  Versie 4.GML  Versie 4.GTL  Versie 4.GTO  Versie 4.GTP  Versie 4.GTS  Versie 4.TXT  Versie 4.brd  Versie 4.dri  Versie 4.gpi  Versie 4.sch
phased-locked-loop/python-scripts/: example.py  pll.py
software/: CMakeLists.txt  readme.md  server.py  test_file_save.grc  test_file_save.py  xcorr.block.yml  xcorr.grc  xcorr.py  zmq_test.cpp
software/gr-examples/: test_1-to-2.grc  test_1_to_2.py
software/rx-test/rx-sine/: CMakeLists.txt  server-tx.py  setup.sh  zmq_test.cpp
software/rx-test/rx-sine/gr-examples/: test_1-to-2.grc  test_1_to_2.py
software/rx-test/rx-zc/: TX_ZC.py  TX_ZC_ZC.py  channel-files.grc  main.cpp  server-sync.py  xcorr-files.grc  xcorr_files.py
software/rx-test/zadoff-chu/: TX_ZC-RX-corr.grc  channel_est_files_numpy.py  phase-ampl-files.grc  server-sync.py  xcorr-files.grc  xcorr_files.py  xcorr_files_ZC_numpy.py
software/rx-test/zadoff-chu/RX/: CMakeLists.txt  main.cpp
software/rx-test/zadoff-chu/TX/: CMakeLists.txt  main.cpp
software/tx-test/: server.py  test_file_save.grc  test_file_save.py  zmq_test.cpp
tests/: GPIO_toggle.md  ZMQ_RX_GR.grc  ZMQ_RX_GR.py  reciprocity_calibration_stepsToFollow.md
tests/reciprocity_calibration/: generate_sine.py  plot-phase-test-2.ipynb  readme.md  test_1.cpp  test_111.cpp  test_211.cpp  test_211.ipynb  test_211b.cpp  test_22.cpp  test_22.py  test_24.cpp  tx_main.cpp
